dataflows/grammar.js
// This file was generated on Wed Feb 10, 2016 15:50 (UTC+01) by REx v5.35 which is Copyright (c) 1979-2015 by Gunther Rademacher <grd@gmx.net>
// REx command line: grammar.ebnf -ll 3 -javascript -tree

function grammar(string, parsingEventHandler)
{
  init(string, parsingEventHandler);

  var self = this;

  this.ParseException = function(b, e, s, o, x)
  {
    var
      begin = b,
      end = e,
      state = s,
      offending = o,
      expected = x;

    this.getBegin = function() {return begin;};
    this.getEnd = function() {return end;};
    this.getState = function() {return state;};
    this.getExpected = function() {return expected;};
    this.getOffending = function() {return offending;};

    this.getMessage = function()
    {
      return offending < 0 ? "lexical analysis failed" : "syntax error";
    };
  };

  function init(string, parsingEventHandler)
  {
    eventHandler = parsingEventHandler;
    input = string;
    size = string.length;
    reset(0, 0, 0);
  }

  this.getInput = function()
  {
    return input;
  };

  function reset(l, b, e)
  {
            b0 = b; e0 = b;
    l1 = l; b1 = b; e1 = e;
    l2 = 0;
    l3 = 0;
    end = e;
    eventHandler.reset(input);
  }

  this.getOffendingToken = function(e)
  {
    var o = e.getOffending();
    return o >= 0 ? grammar.TOKEN[o] : null;
  };

  this.getExpectedTokenSet = function(e)
  {
    var expected;
    if (e.getExpected() < 0)
    {
      expected = grammar.getTokenSet(- e.getState());
    }
    else
    {
      expected = [grammar.TOKEN[e.getExpected()]];
    }
    return expected;
  };

  this.getErrorMessage = function(e)
  {
    var tokenSet = this.getExpectedTokenSet(e);
    var found = this.getOffendingToken(e);
    var prefix = input.substring(0, e.getBegin());
    var lines = prefix.split("\n");
    var line = lines.length;
    var column = lines[line - 1].length + 1;
    var size = e.getEnd() - e.getBegin();
    return e.getMessage()
         + (found == null ? "" : ", found " + found)
         + "\nwhile expecting "
         + (tokenSet.length == 1 ? tokenSet[0] : ("[" + tokenSet.join(", ") + "]"))
         + "\n"
         + (size == 0 || found != null ? "" : "after successfully scanning " + size + " characters beginning ")
         + "at line " + line + ", column " + column + ":\n..."
         + input.substring(e.getBegin(), Math.min(input.length, e.getBegin() + 64))
         + "...";
  };

  this.parse_XProc = function()
  {
    eventHandler.startNonterminal("XProc", e0);
    lookahead1W(60);                // StringLiteral | QName^Token | S^WS | EOF | '$' | '(' | '(:' | '[' | 'declare' |
                                    // 'if' | 'import' | 'inputs' | 'let' | 'option' | 'outputs' | 'step' | 'xproc' |
                                    // '{'
    whitespace();
    parse_XProcModule();
    shift(10);                      // EOF
    eventHandler.endNonterminal("XProc", e0);
  };

  function parse_XProcModule()
  {
    eventHandler.startNonterminal("XProcModule", e0);
    if (l1 == 101)                  // 'xproc'
    {
      parse_XProcVersionDecl();
    }
    lookahead1W(58);                // StringLiteral | QName^Token | S^WS | EOF | '$' | '(' | '(:' | '[' | 'declare' |
                                    // 'if' | 'import' | 'inputs' | 'let' | 'option' | 'outputs' | 'step' | '{'
    whitespace();
    parse_XProcProlog();
    if (l1 != 10)                   // EOF
    {
      whitespace();
      parse_XProcFlow();
    }
    eventHandler.endNonterminal("XProcModule", e0);
  }

  function parse_XProcVersionDecl()
  {
    eventHandler.startNonterminal("XProcVersionDecl", e0);
    shift(101);                     // 'xproc'
    lookahead1W(20);                // S^WS | '(:' | 'version'
    shift(100);                     // 'version'
    lookahead1W(12);                // S^WS | '(:' | '='
    shift(33);                      // '='
    lookahead1W(1);                 // StringLiteral | S^WS | '(:'
    shift(4);                       // StringLiteral
    lookahead1W(11);                // S^WS | '(:' | ';'
    whitespace();
    parse_XProcSeparator();
    eventHandler.endNonterminal("XProcVersionDecl", e0);
  }

  function parse_XProcProlog()
  {
    eventHandler.startNonterminal("XProcProlog", e0);
    for (;;)
    {
      lookahead1W(58);              // StringLiteral | QName^Token | S^WS | EOF | '$' | '(' | '(:' | '[' | 'declare' |
                                    // 'if' | 'import' | 'inputs' | 'let' | 'option' | 'outputs' | 'step' | '{'
      if (l1 != 52                  // 'declare'
       && l1 != 68)                 // 'import'
      {
        break;
      }
      switch (l1)
      {
      case 52:                      // 'declare'
        lookahead2W(34);            // S^WS | '(:' | 'default' | 'namespace'
        break;
      default:
        lk = l1;
      }
      switch (lk)
      {
      case 6836:                    // 'declare' 'default'
        whitespace();
        parse_XProcDefaultNamespaceDecl();
        break;
      case 10164:                   // 'declare' 'namespace'
        whitespace();
        parse_XProcNamespaceDecl();
        break;
      default:
        whitespace();
        parse_XProcImport();
      }
      lookahead1W(11);              // S^WS | '(:' | ';'
      whitespace();
      parse_XProcSeparator();
    }
    if (l1 == 69)                   // 'inputs'
    {
      whitespace();
      parse_XProcInputs();
      whitespace();
      parse_XProcSeparator();
    }
    lookahead1W(56);                // StringLiteral | QName^Token | S^WS | EOF | '$' | '(' | '(:' | '[' | 'if' |
                                    // 'let' | 'option' | 'outputs' | 'step' | '{'
    if (l1 == 86)                   // 'outputs'
    {
      whitespace();
      parse_XProcOutputs();
      whitespace();
      parse_XProcSeparator();
    }
    for (;;)
    {
      lookahead1W(53);              // StringLiteral | QName^Token | S^WS | EOF | '$' | '(' | '(:' | '[' | 'if' |
                                    // 'let' | 'option' | 'step' | '{'
      if (l1 != 84)                 // 'option'
      {
        break;
      }
      whitespace();
      parse_XProcOptionDecl();
      lookahead1W(11);              // S^WS | '(:' | ';'
      whitespace();
      parse_XProcSeparator();
    }
    for (;;)
    {
      lookahead1W(51);              // StringLiteral | QName^Token | S^WS | EOF | '$' | '(' | '(:' | '[' | 'if' |
                                    // 'let' | 'step' | '{'
      if (l1 != 93)                 // 'step'
      {
        break;
      }
      whitespace();
      parse_XProcStepDecl();
      whitespace();
      parse_XProcSeparator();
    }
    eventHandler.endNonterminal("XProcProlog", e0);
  }

  function parse_XProcImport()
  {
    eventHandler.startNonterminal("XProcImport", e0);
    shift(68);                      // 'import'
    lookahead1W(1);                 // StringLiteral | S^WS | '(:'
    whitespace();
    parse_XProcURILiteral();
    eventHandler.endNonterminal("XProcImport", e0);
  }

  function parse_XProcInputs()
  {
    eventHandler.startNonterminal("XProcInputs", e0);
    shift(69);                      // 'inputs'
    lookahead1W(4);                 // S^WS | '$' | '(:'
    whitespace();
    parse_XProcParamList();
    eventHandler.endNonterminal("XProcInputs", e0);
  }

  function parse_XProcOutputs()
  {
    eventHandler.startNonterminal("XProcOutputs", e0);
    shift(86);                      // 'outputs'
    lookahead1W(4);                 // S^WS | '$' | '(:'
    whitespace();
    parse_XProcParamList();
    eventHandler.endNonterminal("XProcOutputs", e0);
  }

  function parse_XProcOptionDecl()
  {
    eventHandler.startNonterminal("XProcOptionDecl", e0);
    shift(84);                      // 'option'
    lookahead1W(4);                 // S^WS | '$' | '(:'
    whitespace();
    parse_XProcParam();
    eventHandler.endNonterminal("XProcOptionDecl", e0);
  }

  function parse_XProcStepDecl()
  {
    eventHandler.startNonterminal("XProcStepDecl", e0);
    shift(93);                      // 'step'
    lookahead1W(3);                 // QName^Token | S^WS | '(:'
    whitespace();
    parse_FunctionName();
    lookahead1W(5);                 // S^WS | '(' | '(:'
    shift(15);                      // '('
    lookahead1W(26);                // S^WS | '$' | '(:' | ')'
    if (l1 == 14)                   // '$'
    {
      whitespace();
      parse_XProcParamList();
    }
    shift(17);                      // ')'
    lookahead1W(41);                // S^WS | '(:' | ';' | 'inputs' | 'outputs'
    if (l1 == 69)                   // 'inputs'
    {
      whitespace();
      parse_XProcInputs();
    }
    if (l1 == 86)                   // 'outputs'
    {
      whitespace();
      parse_XProcOutputs();
    }
    eventHandler.endNonterminal("XProcStepDecl", e0);
  }

  function parse_XProcFlow()
  {
    eventHandler.startNonterminal("XProcFlow", e0);
    for (;;)
    {
      whitespace();
      parse_XProcFlowStatement();
      lookahead1W(52);              // StringLiteral | QName^Token | S^WS | EOF | '$' | '(' | '(:' | '[' | 'if' |
                                    // 'let' | '{' | '}'
      if (l1 == 10                  // EOF
       || l1 == 105)                // '}'
      {
        break;
      }
    }
    eventHandler.endNonterminal("XProcFlow", e0);
  }

  function parse_XProcFlowStatement()
  {
    eventHandler.startNonterminal("XProcFlowStatement", e0);
    switch (l1)
    {
    case 67:                        // 'if'
      parse_XProcIfStatement();
      break;
    case 75:                        // 'let'
      parse_XProcLetStatement();
      break;
    default:
      parse_XProcStepChain();
      if (l1 == 37                  // '>>'
       || l1 == 107)                // '≫'
      {
        whitespace();
        parse_XProcOutputBinding();
      }
    }
    eventHandler.endNonterminal("XProcFlowStatement", e0);
  }

  function parse_XProcStepChain()
  {
    eventHandler.startNonterminal("XProcStepChain", e0);
    switch (l1)
    {
    case 7:                         // QName^Token
    case 102:                       // '{'
      switch (l1)
      {
      case 7:                       // QName^Token
        parse_XProcStepInvocation();
        break;
      default:
        parse_XProcBlockStatement();
      }
      for (;;)
      {
        lookahead1W(61);            // StringLiteral | QName^Token | S^WS | EOF | '!' | '$' | '(' | '(:' | '=>' | '>>' |
                                    // '[' | 'else' | 'if' | 'let' | 'replace' | 'tee' | '{' | '}' | '→' | '≫' | '⊤'
        if (l1 != 12                // '!'
         && l1 != 34                // '=>'
         && l1 != 91                // 'replace'
         && l1 != 94                // 'tee'
         && l1 != 106               // '→'
         && l1 != 108)              // '⊤'
        {
          break;
        }
        whitespace();
        parse_XProcStepChainItem();
      }
      break;
    default:
      switch (l1)
      {
      case 40:                      // '['
        parse_XProcInputPortList();
        break;
      default:
        parse_XProcSequenceLiteral();
      }
      for (;;)
      {
        lookahead1W(48);            // S^WS | '!' | '(:' | '=>' | 'replace' | 'tee' | '→' | '⊤'
        whitespace();
        parse_XProcStepChainItem();
        lookahead1W(61);            // StringLiteral | QName^Token | S^WS | EOF | '!' | '$' | '(' | '(:' | '=>' | '>>' |
                                    // '[' | 'else' | 'if' | 'let' | 'replace' | 'tee' | '{' | '}' | '→' | '≫' | '⊤'
        if (l1 != 12                // '!'
         && l1 != 34                // '=>'
         && l1 != 91                // 'replace'
         && l1 != 94                // 'tee'
         && l1 != 106               // '→'
         && l1 != 108)              // '⊤'
        {
          break;
        }
      }
    }
    eventHandler.endNonterminal("XProcStepChain", e0);
  }

  function parse_XProcStepChainItem()
  {
    eventHandler.startNonterminal("XProcStepChainItem", e0);
    switch (l1)
    {
    case 34:                        // '=>'
    case 106:                       // '→'
      parse_XProcChainedItem();
      break;
    case 12:                        // '!'
      parse_XProcIteratedItem();
      break;
    case 91:                        // 'replace'
      parse_XProcReplacedItem();
      break;
    default:
      parse_XProcTeedItem();
    }
    eventHandler.endNonterminal("XProcStepChainItem", e0);
  }

  function parse_XProcSequenceLiteral()
  {
    eventHandler.startNonterminal("XProcSequenceLiteral", e0);
    switch (l1)
    {
    case 15:                        // '('
      shift(15);                    // '('
      lookahead1W(24);              // StringLiteral | S^WS | '$' | '(:'
      whitespace();
      parse_XProcSequenceItem();
      for (;;)
      {
        lookahead1W(28);            // S^WS | '(:' | ')' | ','
        if (l1 != 20)               // ','
        {
          break;
        }
        shift(20);                  // ','
        lookahead1W(24);            // StringLiteral | S^WS | '$' | '(:'
        whitespace();
        parse_XProcSequenceItem();
      }
      shift(17);                    // ')'
      break;
    default:
      parse_XProcSequenceItem();
    }
    eventHandler.endNonterminal("XProcSequenceLiteral", e0);
  }

  function parse_XProcSequenceItem()
  {
    eventHandler.startNonterminal("XProcSequenceItem", e0);
    switch (l1)
    {
    case 4:                         // StringLiteral
      parse_XProcURILiteral();
      break;
    default:
      parse_XProcPortInput();
    }
    eventHandler.endNonterminal("XProcSequenceItem", e0);
  }

  function parse_XProcChainedItem()
  {
    eventHandler.startNonterminal("XProcChainedItem", e0);
    parse_XProcArrow();
    lookahead1W(40);                // QName^Token | S^WS | '(:' | '[' | '{'
    whitespace();
    parse_XProcChainItem();
    eventHandler.endNonterminal("XProcChainedItem", e0);
  }

  function parse_XProcIteratedItem()
  {
    eventHandler.startNonterminal("XProcIteratedItem", e0);
    parse_XProcIteration();
    lookahead1W(21);                // S^WS | '(:' | '{'
    whitespace();
    parse_XProcBlockStatement();
    eventHandler.endNonterminal("XProcIteratedItem", e0);
  }

  function parse_XProcTeedItem()
  {
    eventHandler.startNonterminal("XProcTeedItem", e0);
    parse_XProcTee();
    lookahead1W(21);                // S^WS | '(:' | '{'
    whitespace();
    parse_XProcBlockStatement();
    lookahead1W(33);                // S^WS | '(:' | '=>' | '→'
    whitespace();
    parse_XProcChainedItem();
    eventHandler.endNonterminal("XProcTeedItem", e0);
  }

  function parse_XProcReplacedItem()
  {
    eventHandler.startNonterminal("XProcReplacedItem", e0);
    parse_XProcReplace();
    lookahead1W(5);                 // S^WS | '(' | '(:'
    shift(15);                      // '('
    lookahead1W(63);                // IntegerLiteral | DecimalLiteral | DoubleLiteral | StringLiteral |
                                    // URIQualifiedName | QName^Token | S^WS | Wildcard | '$' | '(' | '(:' | '.' |
                                    // '..' | '/' | '//' | '@' | 'ancestor' | 'ancestor-or-self' | 'attribute' |
                                    // 'child' | 'comment' | 'descendant' | 'descendant-or-self' | 'document-node' |
                                    // 'element' | 'following' | 'following-sibling' | 'namespace-node' | 'node' |
                                    // 'parent' | 'preceding' | 'preceding-sibling' | 'processing-instruction' |
                                    // 'self' | 'text'
    whitespace();
    parse_PathExpr();
    shift(17);                      // ')'
    lookahead1W(21);                // S^WS | '(:' | '{'
    whitespace();
    parse_XProcBlockStatement();
    eventHandler.endNonterminal("XProcReplacedItem", e0);
  }

  function parse_XProcChainItem()
  {
    eventHandler.startNonterminal("XProcChainItem", e0);
    switch (l1)
    {
    case 40:                        // '['
      parse_XProcInputPortList();
      break;
    case 7:                         // QName^Token
      parse_XProcStepInvocation();
      break;
    default:
      parse_XProcBlockStatement();
    }
    eventHandler.endNonterminal("XProcChainItem", e0);
  }

  function parse_XProcArrow()
  {
    eventHandler.startNonterminal("XProcArrow", e0);
    switch (l1)
    {
    case 34:                        // '=>'
      shift(34);                    // '=>'
      break;
    default:
      shift(106);                   // '→'
    }
    eventHandler.endNonterminal("XProcArrow", e0);
  }

  function parse_XProcIteration()
  {
    eventHandler.startNonterminal("XProcIteration", e0);
    shift(12);                      // '!'
    eventHandler.endNonterminal("XProcIteration", e0);
  }

  function parse_XProcTee()
  {
    eventHandler.startNonterminal("XProcTee", e0);
    switch (l1)
    {
    case 94:                        // 'tee'
      shift(94);                    // 'tee'
      break;
    default:
      shift(108);                   // '⊤'
    }
    eventHandler.endNonterminal("XProcTee", e0);
  }

  function parse_XProcReplace()
  {
    eventHandler.startNonterminal("XProcReplace", e0);
    shift(91);                      // 'replace'
    eventHandler.endNonterminal("XProcReplace", e0);
  }

  function parse_XProcInputPortList()
  {
    eventHandler.startNonterminal("XProcInputPortList", e0);
    shift(40);                      // '['
    lookahead1W(42);                // StringLiteral | QName^Token | S^WS | '$' | '(' | '(:'
    whitespace();
    parse_XProcInputPortBinding();
    for (;;)
    {
      lookahead1W(31);              // S^WS | '(:' | ',' | ']'
      if (l1 != 20)                 // ','
      {
        break;
      }
      shift(20);                    // ','
      lookahead1W(42);              // StringLiteral | QName^Token | S^WS | '$' | '(' | '(:'
      whitespace();
      parse_XProcInputPortBinding();
    }
    shift(41);                      // ']'
    eventHandler.endNonterminal("XProcInputPortList", e0);
  }

  function parse_XProcInputPortBinding()
  {
    eventHandler.startNonterminal("XProcInputPortBinding", e0);
    if (l1 == 7)                    // QName^Token
    {
      parse_QName();
      lookahead1W(12);              // S^WS | '(:' | '='
      shift(33);                    // '='
    }
    lookahead1W(37);                // StringLiteral | S^WS | '$' | '(' | '(:'
    whitespace();
    parse_XProcSequenceLiteral();
    eventHandler.endNonterminal("XProcInputPortBinding", e0);
  }

  function parse_XProcInputOrdinal()
  {
    eventHandler.startNonterminal("XProcInputOrdinal", e0);
    shift(14);                      // '$'
    lookahead1W(0);                 // IntegerLiteral | S^WS | '(:'
    shift(1);                       // IntegerLiteral
    eventHandler.endNonterminal("XProcInputOrdinal", e0);
  }

  function parse_XProcOutputBinding()
  {
    eventHandler.startNonterminal("XProcOutputBinding", e0);
    parse_XProcAppend();
    lookahead1W(44);                // StringLiteral | S^WS | '$' | '(:' | '@' | '['
    switch (l1)
    {
    case 40:                        // '['
      whitespace();
      parse_XProcOutputPortList();
      break;
    default:
      whitespace();
      parse_XProcOutputItem();
    }
    eventHandler.endNonterminal("XProcOutputBinding", e0);
  }

  function parse_XProcAppend()
  {
    eventHandler.startNonterminal("XProcAppend", e0);
    switch (l1)
    {
    case 37:                        // '>>'
      shift(37);                    // '>>'
      break;
    default:
      shift(107);                   // '≫'
    }
    eventHandler.endNonterminal("XProcAppend", e0);
  }

  function parse_XProcOutputItem()
  {
    eventHandler.startNonterminal("XProcOutputItem", e0);
    switch (l1)
    {
    case 4:                         // StringLiteral
      parse_XProcURILiteral();
      break;
    case 14:                        // '$'
      parse_XProcPortRef();
      break;
    default:
      parse_XProcOutputOrdinal();
    }
    eventHandler.endNonterminal("XProcOutputItem", e0);
  }

  function parse_XProcOutputOrdinal()
  {
    eventHandler.startNonterminal("XProcOutputOrdinal", e0);
    shift(39);                      // '@'
